添加订单评价功能，改善信息提示，修复若干bug

--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -24,9 +24,10 @@
             <li class="layui-nav-item"><a th:href="@{/customer/toHome}">HOME</a></li>
             <li class="layui-nav-item"><a th:href="@{/store/toStreet}">美食街</a></li>
             <li class="layui-nav-item">
-                <a th:href="@{/customer/toOrderingCheck}">我的订单</a>
+                <a th:href="@{/ordering/toOrderingCheck}">我的订单</a>
                 <dl class="layui-nav-child">
                     <dd><a th:href="@{/ordering/toOrderingCheck}">查看订单</a></dd>
+                    <dd><a th:href="@{/evaluation/toEvaluationCheck}">我的评价</a></dd>
                 </dl>
             </li>
         </ul>
@@ -86,7 +87,6 @@
 
 
 <script>
-
 
 
 
