--- a/src/main/resources/templates/store_detail.html
+++ b/src/main/resources/templates/store_detail.html
@@ -151,6 +151,52 @@
                 </div>
                 <!--······················菜品评价···························-->
                 <div class="layui-tab-item" style="min-height: 600px;">
+                    <br>
+                     <span th:each="item: ${evaluationList}" >
+
+                        <table bordercolor="#bfbfbf" style="border-collapse:collapse;width: 90%;margin:auto;">
+
+                                   <tr cel style="width: 100%;height: 75px">
+                                            <td width="3%"></td>
+                                            <td width="10%">
+                                                <img th:src="@{/static/upload/匿名头像.jpg}" height="50px" width="50px" style="margin: 2px;border-radius: 25px">
+                                            </td>
+                                            <td>
+                                                <table width="100%" height="100%">
+                                                    <tr height="50%">
+                                                        <td width="70%">[[${item.customerName}]]</td>
+                                                        <td width="30%">
+                                                            <div style="color: #6c6c6c;font-size: 12px">
+                                                                <span th:text="${#dates.format(item.date, 'yyyy-MM-dd HH:mm:ss')}"/>
+                                                            </div>
+                                                        </td>
+                                                    </tr>
+                                                    <tr>
+                                                        <td width="5%"></td>
+                                                        <td colspan="2">
+                                                           <div style="color: #6c6c6c;font-size: 12px">
+                                                                评分:[[${item.score}]]
+                                                           </div>
+                                                        </td>
+                                                    </tr>
+                                                </table>
+                                            </td>
+                                        </tr>
+                                        <tr>
+                                            <td width="3%"></td>
+                                            <td colspan="2">
+                                                [[${item.evaluation}]]
+                                            </td>
+                                        </tr>
+                                        <tr>
+                                            <td width="3%"></td>
+                                            <td colspan="2" style="height: 120px">
+                                                <img th:src="@{/static/upload/{image1}(image1=${item.image1})}" height="100px" width="100px" style="margin: 2px;border-radius: 5px">
+                                            </td>
+                                        </tr>
+                        </table>
+                         <br>
+                     </span>
 
 
 
