--- a/src/main/resources/templates/pages/evaluation_check.html
+++ b/src/main/resources/templates/pages/evaluation_check.html
@@ -96,12 +96,14 @@
                                         <tr cel style="width: 100%;height: 75px">
                                             <td width="3%"></td>
                                             <td width="10%">
-                                                <img th:src="@{/static/upload/匿名头像.jpg}" height="50px" width="50px" style="margin: 2px;border-radius: 25px">
+                                                <img th:src="@{/static/upload/{loginBeanImage}(loginBeanImage=${item.customerImage})}" height="50px" width="50px" style="margin: 2px;border-radius: 25px">
                                             </td>
                                             <td>
                                                 <table width="100%" height="100%">
                                                     <tr height="50%">
+
                                                         <td width="70%">[[${item.customerName}]]</td>
+
                                                         <td width="30%">
                                                             <div style="color: #6c6c6c;font-size: 12px">
                                                                 <span th:text="${#dates.format(item.date, 'yyyy-MM-dd HH:mm:ss')}"/>
@@ -125,16 +127,32 @@
                                                 [[${item.evaluation}]]
                                             </td>
                                         </tr>
+                            <!--如果image1的数据不为空则加载放图片的位置，否则不加载-->
+                            <span th:if=" ${item.image1} ne '' ">
                                         <tr>
                                             <td width="3%"></td>
                                             <td colspan="2" style="height: 120px">
-                                                <img th:src="@{/static/upload/{image1}(image1=${item.image1})}" height="100px" width="100px" style="margin: 2px;border-radius: 5px">
+                                                    <img th:src="@{/static/upload/{image1}(image1=${item.image1})}" height="100px" width="100px" style="margin: 2px;border-radius: 5px">
+
+                                                <span th:if=" ${item.image2} ne '' ">
+                                                    <img th:src="@{/static/upload/{image1}(image1=${item.image2})}" height="100px" width="100px" style="margin: 2px;border-radius: 5px">
+                                                </span>
+                                                <span th:if=" ${item.image3} ne '' ">
+                                                    <img th:src="@{/static/upload/{image1}(image1=${item.image3})}" height="100px" width="100px" style="margin: 2px;border-radius: 5px">
+                                                </span>
+                                                <span th:if=" ${item.image4} ne '' ">
+                                                    <img th:src="@{/static/upload/{image1}(image1=${item.image4})}" height="100px" width="100px" style="margin: 2px;border-radius: 5px">
+                                                </span>
                                             </td>
                                         </tr>
-
-                                </table>
+                                </span>
+                                <span th:if=" ${item.image1} eq '' ">
+                                        <tr>
+                                            <td colspan="3" height="10px"></td>
+                                        </tr>
+                                </span>
+                        </table>
                         <br>
-
                     </span>
 
                 </div>
