--- a/src/main/resources/templates/store_detail.html
+++ b/src/main/resources/templates/store_detail.html
@@ -94,7 +94,6 @@
                         <div class="site-doc-icon site-doc-anim">
 
 
-
                                 <span th:each="item: ${dishes}">
                                     <div class="dishes layui-anim" data-anim="layui-anim-scale"  th:dishes_id="${item.id}" th:dishes_price="${item.price}" th:dishes_name="${item.name}">
                                         <img  style="height: 120px;width: 120px;" th:src="@{/static/images/{itemImage}(itemImage=${item.image})}">
@@ -159,12 +158,16 @@
                                    <tr cel style="width: 100%;height: 75px">
                                             <td width="3%"></td>
                                             <td width="10%">
-                                                <img th:src="@{/static/upload/匿名头像.jpg}" height="50px" width="50px" style="margin: 2px;border-radius: 25px">
+                                                <span th:if=" ${item.anonymity} eq 1 "><img th:src="@{/static/upload/匿名头像.jpg}" height="50px" width="50px" style="margin: 2px;border-radius: 25px"></span>
+                                                <span th:if=" ${item.anonymity} eq 0 "><img th:src="@{/static/upload/{loginBeanImage}(loginBeanImage=${item.customerImage})}" height="50px" width="50px" style="margin: 2px;border-radius: 25px"></span>
                                             </td>
                                             <td>
                                                 <table width="100%" height="100%">
                                                     <tr height="50%">
-                                                        <td width="70%">[[${item.customerName}]]</td>
+                                                        <td width="70%">
+                                                            <span th:if=" ${item.anonymity} eq 1 ">匿名用户</span>
+                                                            <span th:if=" ${item.anonymity} eq 0 ">[[${item.customerName}]]</span>
+                                                        </td>
                                                         <td width="30%">
                                                             <div style="color: #6c6c6c;font-size: 12px">
                                                                 <span th:text="${#dates.format(item.date, 'yyyy-MM-dd HH:mm:ss')}"/>
@@ -188,12 +191,30 @@
                                                 [[${item.evaluation}]]
                                             </td>
                                         </tr>
-                                        <tr>
-                                            <td width="3%"></td>
-                                            <td colspan="2" style="height: 120px">
-                                                <img th:src="@{/static/upload/{image1}(image1=${item.image1})}" height="100px" width="100px" style="margin: 2px;border-radius: 5px">
-                                            </td>
-                                        </tr>
+                                        <!--如果image1的数据不为空则加载放图片的位置，否则不加载-->
+                                        <span th:if=" ${item.image1} ne '' ">
+                                                    <tr>
+                                                        <td width="3%"></td>
+                                                        <td colspan="2" style="height: 120px">
+                                                                <img th:src="@{/static/upload/{image1}(image1=${item.image1})}" height="100px" width="100px" style="margin: 2px;border-radius: 5px">
+
+                                                            <span th:if=" ${item.image2} ne '' ">
+                                                                <img th:src="@{/static/upload/{image1}(image1=${item.image2})}" height="100px" width="100px" style="margin: 2px;border-radius: 5px">
+                                                            </span>
+                                                            <span th:if=" ${item.image3} ne '' ">
+                                                                <img th:src="@{/static/upload/{image1}(image1=${item.image3})}" height="100px" width="100px" style="margin: 2px;border-radius: 5px">
+                                                            </span>
+                                                            <span th:if=" ${item.image4} ne '' ">
+                                                                <img th:src="@{/static/upload/{image1}(image1=${item.image4})}" height="100px" width="100px" style="margin: 2px;border-radius: 5px">
+                                                            </span>
+                                                        </td>
+                                                    </tr>
+                                            </span>
+                                            <span th:if=" ${item.image1} eq '' ">
+                                                    <tr>
+                                                        <td colspan="3" height="10px"></td>
+                                                    </tr>
+                                            </span>
                         </table>
                          <br>
                      </span>
