--- a/src/main/resources/templates/store_street.html
+++ b/src/main/resources/templates/store_street.html
@@ -14,6 +14,7 @@
 
 </head>
 <body>
+
 <!--······················导航栏···························-->
 <div class="layui-layout layui-layout-admin">
     <div class="layui-header">
@@ -26,6 +27,7 @@
                 <a th:href="@{/ordering/toOrderingCheck}">我的订单</a>
                 <dl class="layui-nav-child">
                     <dd><a th:href="@{/ordering/toOrderingCheck}">查看订单</a></dd>
+                    <dd><a th:href="@{/evaluation/toEvaluationCheck}">我的评价</a></dd>
                 </dl>
             </li>
         </ul>
