删除多余的依赖包

--- a/src/main/resources/templates/store_detail.html
+++ b/src/main/resources/templates/store_detail.html
@@ -81,7 +81,7 @@
             <ul class="layui-tab-title">
                 <li class="layui-this storeMenu">菜单</li>
                 <li class="storeIntroduction">店铺简介</li>
-                <li class="dishesEvaluation">菜品评价</li>
+                <li class="dishesEvaluation">店铺评价</li>
 
             </ul>
             <div class="layui-tab-content"style="padding: 0px;background-color:#f7f7f7;">
