修复项目部署到服务器就无法上传图片的bug

--- a/src/main/resources/templates/pages/evaluation_check.html
+++ b/src/main/resources/templates/pages/evaluation_check.html
@@ -93,7 +93,7 @@
 
                     <span th:each="item: ${evaluationList}" >
 
-                        <table bordercolor="#bfbfbf" style="border-collapse:collapse;width: 90%;margin:auto; background-color: #f7f7f7">
+                        <table bordercolor="#bfbfbf" style="border-collapse:collapse;width: 90%;margin:auto;border: 0px; background-color: #f7f7f7">
 
                                         <tr cel style="width: 100%;height: 75px">
                                             <td width="3%"></td>
