--- a/src/main/resources/templates/store_detail.html
+++ b/src/main/resources/templates/store_detail.html
@@ -155,7 +155,7 @@
                     <br>
                      <span th:each="item: ${evaluationList}" >
 
-                        <table bordercolor="#bfbfbf" style="border-collapse:collapse;width: 90%;margin:auto;">
+                        <table bordercolor="#bfbfbf" style="border-collapse:collapse;border: 0px;width: 90%;margin:auto;">
 
                                    <tr cel style="width: 100%;height: 75px">
                                             <td width="3%"></td>
