--- a/src/main/resources/templates/pages/customer_info.html
+++ b/src/main/resources/templates/pages/customer_info.html
@@ -78,7 +78,7 @@
         <div style="flex:1">
 
             <dl style="width: 80%;margin: 0px auto">
-                <dt style="line-height: 50px">ID:[[${session.loginBean.id}]]</dt>
+                <dt style="line-height: 50px">ID:[[${session.loginBean.image}]]</dt>
                 <dt style="line-height: 50px">
                     <button class="headPortrait">修改头像</button>
                 </dt>
